# shopai-ml-recommender-system

./: .gitignore  Makefile  PLAN_DE_TRABAJO.md  README.md  ecs-task-definition.example.json  pyproject.toml  shopai-ecs-policy.example.json
docker/: Dockerfile  docker-compose.yml
docs/: API.md  API_ENDPOINTS.md  ARCHITECTURE.md  AWS_CONFIG_SETUP.md  AWS_DEPLOYMENT_GUIDE.md  AWS_SETUP.md  COSTS.md  DEPLOYMENT.md  EDA_REPORT.md  MONITORING.md  OPENAI_INTEGRATION.md  REQUIREMENTS_CHECKLIST.md
scripts/: deploy.example.sh  download_from_s3.py  eda.py  evaluate.py  evaluate_production.py  generate_cost_analysis.py  generate_embeddings.py  ingest.py  push_to_ecr.example.sh  refresh_embeddings.py  regenerate_faiss_index.py  retrain_model.py  setup_aws_ecs.example.sh  train.py  upload_to_s3.py
src/api/: download_artifacts.py  main.py
src/api/middleware/: logging.py  metrics.py
src/api/routes/: __init__.py  feedback.py  health.py  recommendations.py  reports.py  search.py
src/api/schemas/: __init__.py  feedback.py  health.py  recommendations.py  search.py
src/config/: constants.py  settings.py
src/data/: catalog.py  ingestion.py  splitting.py  transformation.py  validation.py
src/infrastructure/: cache.py  logging.py  metrics.py
src/models/: baseline.py  collaborative.py  embeddings.py  evaluation.py  hybrid.py
src/monitoring/: drift_detection.py
src/services/: recommendation.py  search.py  vector_store.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_embeddings.py  test_splitting.py  test_validation.py  test_vector_store.py
