[tool.poetry]
name = "shopai-ml-recommender-system"
version = "0.1.0"
description = "Hybrid recommendation and semantic search system using collaborative filtering and OpenAI embeddings"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = {extras = ["settings"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
implicit = "^0.7.0"
faiss-cpu = "^1.7.4"
openai = "^1.3.0"
boto3 = "^1.29.0"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
tenacity = "^8.2.3"
tqdm = "^4.66.0"
pyarrow = "^14.0.0"
diskcache = "^5.6.3"
joblib = "^1.3.2"
pytz = "^2023.3"
python-multipart = "^0.0.6"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
hypothesis = "^6.92.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

